added dependency jackson-dataformat-yaml

--- a/glascube/pom.xml
+++ b/glascube/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.codecool</groupId>
-	<artifactId>glascube</artifactId>
+	<artifactId>glasscube</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>glascube</name>
 	<description>Application project for Glascube interview</description>
@@ -40,6 +40,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.15.2</version>
 		</dependency>
 	</dependencies>
 
